--- a/app/views/aadts/edit.html.erb
+++ b/app/views/aadts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-static-top navbar-inverse">
+<div class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
     <ul class="nav">
