--- a/app/views/educational_backgrounds/edit.html.erb
+++ b/app/views/educational_backgrounds/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing Educational Background</h1>
+<div class="container">
+    <h1>Editing Educational Background</h1>
 
-<%= render 'form' %>
-
+    <%= render 'form' %>
+</div>
