--- a/app/views/military_histories/show.html.erb
+++ b/app/views/military_histories/show.html.erb
@@ -61,6 +61,9 @@
                     <td><%= military_school.date_of_attendance %></td>
                     <td><%= military_school.nature_of_training %></td>
                     <td><%= military_school.rating %></td>
+                    <td><%= link_to military_school, method: :delete, data: { confirm: "Are you sure you want to delete this military school record?" }, class: "btn btn-mini btn-danger", title: "Delete" do %>
+                      <i class="icon-trash icon-white"></i>
+                      <% end %></td>
                   </tr>
               <% end %>
             </table>
