--- a/app/views/personal_details/_form.html.erb
+++ b/app/views/personal_details/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.text_field :last_name, placeholder: "Last Name" %>
     <%= f.text_field :first_name, placeholder: "First Name" %>
     <%= f.text_field :middle_name, placeholder: "Middle Name" %>
+    <%= f.select :suffix, "<option>Jr.</option><option>Sr</option><option>none</option>".html_safe, prompt: "Select Suffix" %>
   </div>
   <div class="field">
     <%= f.label :rank %><br />
@@ -33,10 +34,17 @@
   </div>
   <div class="field">
     <%= f.label :telephone %><br />
+    <%= f.text_field :telephone_area_code, class: "input-mini", placeholder: "area code" %>
     <%= f.text_field :telephone %>
   </div>
+    <div class="field">
+      <%= f.label :mobile_number %>
+      <%= f.text_field :mobile_number %>
+    </div>
   <div class="field">
     <%= f.label :home_address %><br />
+    <%= f.text_field :street_number, class: "input-small", placeholder: "street number" %>
+    <%= f.text_field :street_name, placeholder: "street name" %>
     <%= f.text_field :home_address %>
   </div>
   <div class="field">
