--- a/app/views/rids_shorts/show.html.erb
+++ b/app/views/rids_shorts/show.html.erb
@@ -111,6 +111,10 @@
     <% end %>
   </p>
 
+  <p>
+    <b>Other skills: </b><%= @rids_short.other_skills %>
+  </p>
 
-    <%= link_to 'Edit', edit_rids_short_path(@rids_short) %>
+
+    <%= link_to 'Edit RIDS Short Assembly Test', edit_rids_short_path(@rids_short) %>
 </div>
