--- a/app/views/aadts/show.html.erb
+++ b/app/views/aadts/show.html.erb
@@ -40,7 +40,7 @@
         <li>Request to undergo Thirty (30) Days <%= @aadt.undergo_thirty_days %> and Annual Active Duty Training effective <%= @aadt.aadt_effective.strftime("%m-%d-%Y") %> </li>
         <li>Following are the information pertaining to personal circumstances:</li>
         <ol style="list-style: lower-alpha;">
-          <li><b>Source and date of commission / enlistment: </b><%= @aadt.date_of_commission.strftime("%m-%d-%Y") %></li>
+          <li><b>Source and date of commission / enlistment: </b><%= @aadt.source_of_commission %>, <%= @aadt.date_of_commission.strftime("%m-%d-%Y") %></li>
           <li><b>Authority: </b><%= @aadt.authority %></li>
           <li><b>Date of last promotion: </b><%= @aadt.date_of_last_promotion.strftime("%m-%d-%Y") %></li>
           <li><b>Permanent address: </b><%= @aadt.permanent_address %></li>
