--- a/app/views/dependents/_form.html.erb
+++ b/app/views/dependents/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.label :date_of_birth %><br />
     <%= f.date_select :date_of_birth, start_year: Date.today.strftime("%Y").to_i - 30, end_year: Date.today.strftime("%Y").to_i %>
   </div>
+  <div class="field">
+    <%= f.label :address %>
+    <%= f.text_area :address, rows: 2 %>
+  </div>
   <div class="actions">
     <%= f.submit "Save", class: "btn" %>
   </div>
