--- a/app/views/rids_shorts/_form.html.erb
+++ b/app/views/rids_shorts/_form.html.erb
@@ -25,6 +25,14 @@
     <%= f.label :zip_code %>
     <%= f.text_field :zip_code %>
   </div>
+    <div class="field">
+      <%= f.label :home_contact_number %>
+      <%= f.text_field :home_contact %>
+    </div>
+    <div class="field">
+      <%= f.label :email_address %>
+      <%= f.text_field :email_address %>
+    </div>
   <div class="field">
     <label>If NROTC indicate school and year graduated</label>
     <%= f.text_field :nrotc_school, placeholder: "Name of school" %><br>
