--- a/app/views/aadts/show.html.erb
+++ b/app/views/aadts/show.html.erb
@@ -1,25 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
-    <ul class="nav">
-      <li><%= link_to "PHS", PersonalDetail.find(@aadt.personal_detail_id) %></li>
-      <li class="active"><a href="#">AADT with SOI</a></li>
-      <% if @aadt.personal_detail.rid.gsis.nil? || @aadt.personal_detail.rid.tin.nil? %>
-          <li><%= link_to "RIDS", edit_rid_path(@aadt.personal_detail.rid) %></li>
-      <% else %>
-          <li>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">RIDS<b class="caret"></b> </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "RIDS", @aadt.personal_detail.rid %></li>
-              <% if @aadt.personal_detail.rid.rids_short.city.present? || @aadt.personal_detail.rid.rids_short.zip_code.present? %>
-                <li><%= link_to "RIDS Short Assembly Test", @aadt.personal_detail.rid.rids_short %></li>
-              <% end %>
-            </ul>
-          </li>
-      <% end %>
-    </ul>
-  </div>
-</div>
+<%= render 'navigation' %>
     <div class="container">
     <p id="notice"><%= notice %></p>
 
