--- a/app/views/personal_details/edit.html.erb
+++ b/app/views/personal_details/edit.html.erb
@@ -1,25 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
-    <ul class="nav">
-      <li class="active"><%= link_to "PHS", @personal_detail %></li>
-      <li><a href="#">AADT with SOI</a></li>
-      <% if @personal_detail.rid.gsis.nil? || @personal_detail.rid.tin.nil? %>
-          <li><%= link_to "RIDS", edit_rid_path(@personal_detail.rid) %></li>
-      <% else %>
-          <li>
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">RIDS<b class="caret"></b> </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "RIDS", @personal_detail.rid %></li>
-              <% if @personal_detail.rid.rids_short.city.present? || @personal_detail.rid.rids_short.zip_code.present? %>
-                  <li><%= link_to "RIDS Short Assembly Test", @personal_detail.rid.rids_short %></li>
-              <% end %>
-            </ul>
-          </li>
-      <% end %>
-    </ul>
-  </div>
-</div>
+<%= render 'navigation' %>
 <div class="container">
     <h1>Editing personal detail</h1>
 
