--- a/app/views/rids_shorts/show.html.erb
+++ b/app/views/rids_shorts/show.html.erb
@@ -1,27 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <%= link_to "7th Marine Brigade", root_path, class: "brand" %>
-    <ul class="nav">
-      <li><%= link_to "PHS", @rids_short.rid.personal_detail %></li>
-      <% if @rids_short.rid.personal_detail.personal_characteristic.nil? && @rids_short.rid.personal_detail.marital_history.nil? && @rids_short.rid.personal_detail.educational_background.nil? %>
-          <li><a href="#preventAadt" data-toggle="modal">AADT with SOI</a></li>
-      <% else %>
-          <li><%= link_to "AADT with SOI", @rids_short.rid.personal_detail.aadt %></li>
-      <% end %>
-      <li class="active">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">RIDS<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><%= link_to "RIDS", @rids_short.rid %></li>
-          <% if @rids_short.rid.rids_short.zip_code.nil? || @rids_short.rid.rids_short.city.nil? %>
-              <li><%= link_to "RIDS Short Assembly Test", edit_rids_short_path(@rids_short) %></li>
-          <% else %>
-              <li class="active"><%= link_to "RIDS Short Assembly Test", @rids_short %></li>
-          <% end %>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</div>
+<%= render 'navigation' %>
 <div class="container">
     <p id="notice"><%= notice %></p>
 
