Finished Security Tag Applications

--- a/app/views/personal_details/_form.html.erb
+++ b/app/views/personal_details/_form.html.erb
@@ -44,8 +44,8 @@
   <div class="field">
     <%= f.label :home_address %><br />
     <%= f.text_field :street_number, class: "input-small", placeholder: "street number" %>
-    <%= f.text_field :street_name, placeholder: "street name" %>
-    <%= f.text_field :home_address %>
+    <%= f.text_field :street_name, placeholder: "street name", class: "input-small" %>
+    <%= f.text_field :home_address, placeholder: "Village & Municipality" %>
   </div>
   <div class="field">
     <%= f.label :birthdate %><br />
