--- a/app/views/personal_details/_navigation.html.erb
+++ b/app/views/personal_details/_navigation.html.erb
@@ -27,6 +27,9 @@
           </li>
       <% end %>
     </ul>
+    <ul class="nav pull-right">
+      <li><%= link_to "Security Application", @personal_detail.security_tag_application %></li>
+    </ul>
   </div>
 </div>
 
