--- a/app/views/personal_characteristics/edit.html.erb
+++ b/app/views/personal_characteristics/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing Personal Characteristic</h1>
+<div class="container">
+    <h1>Editing Personal Characteristic</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
+</div>
