Finished vehicle passcard application form

--- a/app/views/personal_details/index.html.erb
+++ b/app/views/personal_details/index.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :last_name_cont, placeholder: "Search by Last Name", class: "input search-query" %>
     <%= f.submit "Search", class: "btn btn-search" %>
 <% end %>
-<%= link_to 'Create New Personal detail', new_personal_detail_path, class: "btn btn-primary" %>
+<%= link_to 'Create New Personnel Record', new_personal_detail_path, class: "btn btn-primary" %>
 <table class="table">
   <tr>
     <th>Last name</th>
